# scientific-sofware-design

./: CMakeLists.txt  README.md
include/fdtd/: fdtd.h
src/: fdtd.cpp
test/: CMakeLists.txt  tests.cpp
